Display the privacy page link in the footer
If a privacy page has been set, the link will be display, to remove the link, unset the privacy page at `Settings > Privacy`.

--- a/sass/site/_footer.scss
+++ b/sass/site/_footer.scss
@@ -46,6 +46,15 @@
 			word-break: break-all;
 		}
 
+		span {
+			display: inline-block;
+			margin-right: 5px;
+			
+			&:last-of-type {
+				margin-right: 0;
+			}
+		}
+
 		a {
 			color: inherit;
 			text-decoration: none;
