--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -163,6 +163,10 @@
 			.group_table {
 				display: block;
 				padding-bottom: 30px;
+				
+				td:first-child {
+					width: auto !important;
+				}
 			}
 
 			.product_meta {
