--- a/style.css
+++ b/style.css
@@ -665,6 +665,18 @@ a {
       .main-navigation > div ul li:hover > ul,
       .main-navigation > div ul li.focus > ul {
         opacity: 1;
+        visibility: visible; }
+      body:not(.ios) .main-navigation > div ul li:hover > ul,
+      body:not(.ios) .main-navigation > div ul li.focus > ul {
+        opacity: 1;
+        -webkit-transform: scaleY(1);
+        -moz-transform: scaleY(1);
+        -ms-transform: scaleY(1);
+        -o-transform: scaleY(1);
+        transform: scaleY(1);
+        visibility: visible; }
+      .main-navigation > div ul li.hover > ul {
+        opacity: 1;
         -webkit-transform: scaleY(1);
         -moz-transform: scaleY(1);
         -ms-transform: scaleY(1);
