Added back `page-links` clearing
* Changed margin to padding to avoid margin collapse.

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -114,7 +114,8 @@
 }
 
 .page-links {
-	margin: 1.9833em 0 4.6666em;
+	clear: both;
+	padding: 1.9833em 0 4.6666em;
 
 	.page-links-title {
 		color: $color__text-medium;
