Changed JP portfolio terms to a transparent bg

--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -6,7 +6,7 @@
 
 	button {
 		border: none;
-		border-bottom: 2px solid #fff;
+		border-bottom: 2px solid transparent;
 		color: $color__text-light;
 		font-size: 12px;
 		letter-spacing: 1px;
